install/dashboard/service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: kdash
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
#  type: ClusterIP
  type: LoadBalancer
  ports:
    - name: kubernetes-dashboard
      port: 8443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
